@@ -1,9 +1,7 @@
 'use strict'
 
 var url = require('url')
-
 var endOfStream = require('end-of-stream')
-var httpRequestToUrl = require('http-request-to-url')
 
 var { parseUrl } = require('../parsers')
 var { getHTTPDestination } = require('./context')
@@ -191,13 +189,11 @@ exports.traceOutgoingRequest = function (agent, moduleName, method) {
         return emit.apply(req, arguments)
       }
 
-      let url, statusCode
-      httpRequestToUrl(req).then(_url => {
-        url = _url
-      }).catch(() => {
+      const url = getUrlFromRequestAndOptions(req, options, moduleName + ':')
+      if (!url) {
         agent.logger.warn('unable to identify http.ClientRequest url %o', { id: id })
-      })
-
+      }
+      let statusCode
       return req
 
       // In case the request is ended prematurely
@@ -260,3 +256,41 @@ function isAWSSigned (opts) {
   const auth = opts.headers && (opts.headers.Authorization || opts.headers.authorization)
   return typeof auth === 'string' ? auth.startsWith('AWS4-') : false
 }
+
+// Creates a sanitized URL suitable for the span's HTTP context
+//
+// This function reconstructs a URL using the request object's properties
+// where it can (node versions v14.5.0, v12.19.0 and later) , and falling
+// back to the options where it can not.  This function also strips any
+// authentication information provided with the hostname.  In other words
+//
+// http://username:password@example.com/foo
+//
+// becomes http://example.com/foo
+//
+// NOTE: The options argument may not be the same options that are passed
+// to http.request if the caller uses the the http.request(url,options,...)
+// method signature. The agent normalizes the url and options into a single
+// options array. This function expects those pre-normalized options.
+//
+// @param {ClientRequest} req
+// @param {object} options
+// @param {string} fallbackProtocol
+// @return string|undefined
+function getUrlFromRequestAndOptions (req, options, fallbackProtocol) {
+  if (!req) {
+    return undefined
+  }
+  options = options || {}
+  req = req || {}
+  req.agent = req.agent || {}
+
+  const port = options.port ? `:${options.port}` : ''
+  // req.host and req.protocol are node versions v14.5.0/v12.19.0 and later
+  const host = req.host || options.hostname || options.host || 'localhost'
+  const protocol = req.protocol || req.agent.protocol || fallbackProtocol
+
+  return `${protocol}//${host}${port}${req.path}`
+}
+
+exports.getUrlFromRequestAndOptions = getUrlFromRequestAndOptions
