@@ -93,7 +93,6 @@
     "escape-string-regexp": "^4.0.0",
     "fast-safe-stringify": "^2.0.7",
     "http-headers": "^3.0.2",
-    "http-request-to-url": "^1.0.0",
     "is-native": "^1.0.1",
     "measured-reporting": "^1.51.1",
     "monitor-event-loop-delay": "^1.0.0",
